<resources>
    /*title page*/
    <string name="app_name">Pokemon Trainer Quiz</string>
    <string name="appTitle">Welcome to the Pokemon Trainer Quiz</string>
    <string name="trainerName">Please enter your name:</string>
    <string name="btnStart">Start!</string>
    <string name="editName">Ash Ketchum</string>
    <string name="recentTrainer">Recent Trainers: </string>
    <string name="trainerDB">There are no recent trainers...</string>

    /*question 1*/
    <string name="questionOne">What is music preference?</string>
    <string name="q1b1">Country</string>
    <string name="q1b2">Rock</string>
    <string name="q1b3">Hip Hop</string>
    <string name="q1b4">Pop</string>

    /*question 2*/
    <string name="questionTwo">Which one of these is your favorite pokemon?</string>
    <string name="q2b1">Pikachu</string>
    <string name="q2b2">Charizard</string>
    <string name="q2b3">Weedle</string>
    <string name="q2b4">Squirtle</string>

    /*question 3*/
    <string name="questionThree">If you had to eat one...</string>
    <string name="q3b1">Pickle Ice Cream</string>
    <string name="q3b2">Chocolate and Cheese Pizza</string>
    <string name="q3b3">Pepper on Apple Slices</string>
    <string name="q3b4">Blueberries in Bleu Cheese Dressing</string>

    /*question 4*/
    <string name="questionFour">What is most valuable in life?</string>
    <string name="q4b1">Education</string>
    <string name="q4b2">Love</string>
    <string name="q4b3">Family</string>
    <string name="q4b4">Pokemon</string>

    /*question 5*/
    <string name="questionFive">What is your favorite coding language?</string>
    <string name="q5b1">Javascript</string>
    <string name="q5b2">C Sharp</string>
    <string name="q5b3">Java</string>
    <string name="q5b4">Visual Basic</string>

    /*Result*/
    <string name="trainer">Trainer:</string>
    <string name="trainerType">Your specialty is training...</string>
    <string name="btnRestart">Start Over!</string>
</resources>
